[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doom-road"
version = "1.0.0"
description = "Joguinho de desvio de carros feito em Python com pygame-ce."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Udson" }]
keywords = ["game", "pygame", "pygame-ce", "racing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = ["pygame-ce>=2.5.7"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
doom-road = "doom_road.main:main"

[tool.hatch.build.targets.wheel]
packages = ["doom_road"]

[tool.hatch.build.targets.wheel.force-include]
"assets" = "assets"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
